Add file information

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/dstelljes/didx#readme",
   "dependencies": {
-    "commander": "2.19.0"
+    "commander": "2.19.0",
+    "file-type": "10.0.0",
+    "read-chunk": "3.0.0"
   },
   "devDependencies": {
     "jest": "23.6.0",
