--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "directory index generator",
   "main": "source/index.js",
   "scripts": {
-    "test": "standard && jest"
+    "test": "standard"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,10 @@
   "homepage": "https://github.com/dstelljes/didx#readme",
   "dependencies": {
     "commander": "2.19.0",
-    "file-type": "10.0.0",
-    "read-chunk": "3.0.0"
+    "ejs": "2.6.1",
+    "file-type": "10.0.0"
   },
   "devDependencies": {
-    "jest": "23.6.0",
     "standard": "12.0.1"
   }
 }
