--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "commander": "2.19.0",
     "ejs": "2.6.1",
-    "file-type": "10.0.0"
+    "file-type": "10.0.0",
+    "handlebars": "^4.0.12",
+    "mustache": "^3.0.0"
   },
   "devDependencies": {
     "standard": "12.0.1"
